--- a/overlay/FrameworksResTarget/res/values/config.xml
+++ b/overlay/FrameworksResTarget/res/values/config.xml
@@ -33,4 +33,12 @@
          in an overlay, an empty string is passed in. -->
     <string name="config_wlan_network_service_package" translatable="false">vendor.qti.iwlan</string>
 
+    <!-- The behavior when the system detects it has abusive current drains, whether or not to
+         move the app to the restricted standby bucket level.
+         True - we'll move the app to restricted standby bucket as long as its bg battery usage
+         goes beyond the threshold, False - we'll not move it.
+         Note: This should be only enabled on devices with high confidence on power measurement.
+    -->
+    <bool name="config_bg_current_drain_auto_restrict_abusive_apps">true</bool>
+
 </resources>
