lahaina: overlay: Configure default light sensor type
Fixes adaptive brightness after r35 merge

Change-Id: I9b7dcfbc3f2418699fc3846b9cd82dbdd9065168

--- a/overlay/FrameworksResTarget/res/values/config.xml
+++ b/overlay/FrameworksResTarget/res/values/config.xml
@@ -33,4 +33,7 @@
          in an overlay, an empty string is passed in. -->
     <string name="config_wlan_network_service_package">vendor.qti.iwlan</string>
 
+    <!-- Auto-brightness sensor type string -->
+    <string name="config_displayLightSensorType">"android.sensor.light"</string>
+
 </resources>
