--- a/overlay/FrameworksResCommon/res/values/config.xml
+++ b/overlay/FrameworksResCommon/res/values/config.xml
@@ -395,4 +395,8 @@
     <!-- The name of the package that will hold the SMS role by default.
     <string name="config_defaultSms" translatable="false">com.android.mms</string>
     -->
+
+    <!-- True if the device supports Sustained Performance Mode-->
+    <bool name="config_sustainedPerformanceModeSupported">true</bool>
+
 </resources>
