lahaina: Enable config_useDevInputEventForAudioJack
Change-Id: I17304c0a955476b7d700768f98bed3067ec67bc1

--- a/overlay/LahainaFrameworks/res/values/config.xml
+++ b/overlay/LahainaFrameworks/res/values/config.xml
@@ -80,4 +80,8 @@
         <item>0</item> <!-- COLOR_MODE_DEFAULT    -->
         <item>9</item> <!-- COLOR_MODE_DISPLAY_P3 -->
     </integer-array>
+
+    <!-- When true use the linux /dev/input/event subsystem to detect the switch changes
+         on the headphone/microphone jack. When false use the older uevent framework. -->
+    <bool name="config_useDevInputEventForAudioJack">true</bool>
 </resources>
