--- a/overlay/LahainaFrameworks/res/values/config.xml
+++ b/overlay/LahainaFrameworks/res/values/config.xml
@@ -81,7 +81,102 @@
         <item>9</item> <!-- COLOR_MODE_DISPLAY_P3 -->
     </integer-array>
 
+    <!-- Array of light sensor LUX values to define our levels for auto backlight brightness support.
+         The N entries of this array define N  1 zones as follows:
+
+         Zone 0:        0 <= LUX < array[0]
+         Zone 1:        array[0] <= LUX < array[1]
+         ...
+         Zone N:        array[N - 1] <= LUX < array[N]
+         Zone N + 1     array[N] <= LUX < infinity
+
+         Must be overridden in platform specific overlays -->
+    <integer-array name="config_autoBrightnessLevels">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>8</item>
+        <item>12</item>
+        <item>20</item>
+        <item>33</item>
+        <item>55</item>
+        <item>90</item>
+        <item>148</item>
+        <item>245</item>
+        <item>403</item>
+        <item>665</item>
+        <item>1097</item>
+        <item>1808</item>
+        <item>2981</item>
+        <item>5000</item>
+        <item>10000</item>
+    </integer-array>
+
     <!-- When true use the linux /dev/input/event subsystem to detect the switch changes
          on the headphone/microphone jack. When false use the older uevent framework. -->
     <bool name="config_useDevInputEventForAudioJack">true</bool>
+
+    <!-- Array of desired screen brightness in nits corresponding to the lux values
+         in the config_autoBrightnessLevels array. As with config_screenBrightnessMinimumNits and
+         config_screenBrightnessMaximumNits, the display brightness is defined as the measured
+         brightness of an all-white image.
+
+         If this is defined then:
+            - config_autoBrightnessLcdBacklightValues should not be defined
+            - config_screenBrightnessNits must be defined
+            - config_screenBrightnessBacklight must be defined
+
+         This array should have size one greater than the size of the config_autoBrightnessLevels
+         array. The brightness values must be non-negative and non-decreasing. This must be
+         overridden in platform specific overlays -->
+    <array name="config_autoBrightnessDisplayValuesNits">
+        <item>10.25254</item>    <!--  0 - 1  -->
+        <item>25.46192</item>    <!--  1 - 2  -->
+        <item>32.9231998399</item>    <!--  2 - 3  -->
+        <item>37.2564137654</item>    <!--  3 - 4  -->
+        <item>40.1587949692</item>    <!--  4 - 8  -->
+        <item>47.2941398812</item>    <!--  8 - 12  -->
+        <item>51.9914615527</item>    <!--  12 - 20  -->
+        <item>58.8613168724</item>    <!--  20 - 33  -->
+        <item>66.9820439119</item>    <!--  33 - 55  -->
+        <item>77.3881426005</item>    <!--  55 - 90  -->
+        <item>90.0748914709</item>    <!--  90 - 148  -->
+        <item>106.099757597</item>    <!--  148 - 245  -->
+        <item>126.784839595</item>    <!--  245 - 403  -->
+        <item>154.858709208</item>    <!--  403 - 665  -->
+        <item>190.979678749</item>    <!--  665 - 1097  -->
+        <item>236.557765614</item>    <!--  1097 - 1808  -->
+        <item>291.731912956</item>    <!--  1808 - 2981  -->
+        <item>375.646626771</item>    <!--  2981 - 5000  -->
+        <item>476.141854366</item>    <!--  5000 - 10000  -->
+        <item>610.667755086</item>    <!--  10000+  -->
+    </array>
+
+    <!-- An array describing the screen's backlight values corresponding to the brightness
+         values in the config_screenBrightnessNits array.
+
+         This array should be equal in size to config_screenBrightnessBacklight. -->
+    <integer-array name="config_screenBrightnessBacklight">
+        <item>1</item>
+        <item>255</item>
+    </integer-array>
+
+    <!-- An array of floats describing the screen brightness in nits corresponding to the backlight
+         values in the config_screenBrightnessBacklight array.  On OLED displays these  values
+         should be measured with an all white image while the display is in the fully on state.
+         Note that this value should *not* reflect the maximum brightness value for any high
+         brightness modes but only the maximum brightness value obtainable in a sustainable manner.
+
+         This array should be equal in size to config_screenBrightnessBacklight -->
+    <array name="config_screenBrightnessNits">
+        <item>2.0</item>
+        <item>450.0</item>
+    </array>
+
+    <!-- Minimum screen brightness allowed by the power manager. -->
+    <integer name="config_screenBrightnessDim">6</integer>
+
+    <!-- Screen brightness when dozing. -->
+    <integer name="config_screenBrightnessDoze">49</integer>
 </resources>
