--- a/overlay/WifiResCommon/res/values/config.xml
+++ b/overlay/WifiResCommon/res/values/config.xml
@@ -104,4 +104,7 @@
          immediately after the country code is sent to the driver (if the method returns a
          success). -->
     <bool translatable="false" name="config_wifiDriverSupportedNl80211RegChangedEvent">true</bool>
+
+    <!-- Indicates that SAE Hash-to-Element is supported on this device -->
+    <bool translatable="false" name="config_wifiSaeH2eSupported">true</bool>
 </resources>
